update main index

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>CloudWatching 24/7</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h3>Empowering Businesses to Harness the Full Potential of Multi-Cloud Environments</h3>
+							<p></p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Let's Begin!</a></li>
 							</ul>
 						</div>
 					</section>
@@ -47,37 +47,25 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									<h2>Who we are</h2>
+									<h3>Your Trusted Partners in Multi-Cloud Excellence</h3>
+									<p>At CloudWatching24/7, we understand that every business is unique—and so are its cloud challenges. With years of hands-on experience across AWS, Azure, and GCP, our mission is to help businesses unlock the full potential of their cloud investments.</p>
+									<p>We’ve worked with companies ranging from startups to enterprises, designing scalable and cost-effective solutions that meet their needs. Now, we bring that same level of expertise directly to you.</p>
 								</div>
 							</div>
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="top center" /></a>
 						</section>
 						<section>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+									<h3>Why Choose Us?</h3>
+									<ul>
+										<li>Multi-Cloud Expertise: Deep understanding of AWS, Azure, and GCP ecosystems</li>
+										<li>Tailored Solutions: No cookie-cutter approaches—only custom strategies that align with your goals.</li>
+										<li>Proven Results: Track record of reducing costs, enhancing performance, and driving cloud innovation.</li>
 									</ul>
 								</div>
 							</div>
@@ -88,50 +76,61 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Solutions Designed to Simplify Your Cloud Journey</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Custom Automation Solutions</h3>
+									<p><i>Work smarter, not harder</i></p>
+									<p>Automate repetitive tasks and scale your infrastructure with tools like Terraform, Kubernetes, and serverless solutions.</p>
+									<ul>
+										<li>Infrastructure as Code (IaC) implementations</li>
+										<li>CI/CD pipeline design and deployment</li>
+										<li>Workflow automation</li>
+									</ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Multi-Cloud Strategy and Governance</h3>
+									<p><i>Simplify and secure your cloud operations</i></p>
+									<p>We create secure, scalable, and compliant multi-cloud architectures tailored to your business needs</p>
+									<ul>
+										<li>Designing multi-cloud governance frameworks</li>
+										<li>Compliance with industry standards (e.g., GDPR, HIPAA)</li>
+										<li>Role-based access control (RBAC) and security policies</li>
+									</ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Cloud Migration Services</h3>
+									<p><i>Seamless transitions without downtime</i></p>
+									<p>We help you migrate workloads to AWS, Azure, or GCP with minimal disruption and maximum efficiency</p>
+									<ul>
+										<li>End-to-end migration planning</li>
+										<li>Data and application migration</li>
+										<li>Post-migration performance tuning</li>
+									</ul>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Cloud Cost Optimization</h3>
+									<p><i>Take control of your cloud spending</i></p>
+									<p>We analyze your cloud usage and implement strategies to reduce costs while improving efficiency. From leveraging reserved instances to identifying unused resources, we ensure you get the most value out of your multi-cloud setup</p>
+									<ul>
+										<li>Cloud cost audits and recommendations</li>
+										<li>Implementing automated cost monitoring tools</li>
+										<li>Ongoing optimization and reporting</li>
+									</ul>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Let’s Bring Your Cloud Vision to Life</h2>
+							<p><i>Get in touch to discuss your cloud challenges, and we’ll work together to create a tailored solution.</i></p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
